--- a/app/views/products/form.html.erb
+++ b/app/views/products/form.html.erb
@@ -1,1 +1,18 @@
-Form
+<%= form_for @product do |f| %>
+  <div>
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true %>
+  </div>
+
+  <div>
+    <%= f.label :price %>
+    <%= f.number_field :price %>
+  </div>
+
+  <div>
+    <%= f.label :category_id %>
+    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %>
+  </div>
+
+  <%= f.submit 'Guardar' %>
+<% end %>
