--- a/app/views/products/form.html.erb
+++ b/app/views/products/form.html.erb
@@ -11,7 +11,7 @@
 
   <div>
     <%= f.label :category_id %>
-    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %>
+    <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: 'Seleccioname' %>
   </div>
 
   <%= f.submit 'Guardar' %>
